Added Employee and Tools Summary